# OTUS-AI-Solutions-Architect

./: .gitignore  PlantUML-Graphviz-Install-Guide.md  README.md  SAD.md
AI-Architect-Calculators/: CMakeLists.txt  QUICKSTART.md  README.md  start_server.bat  test_api.bat
AI-Architect-Calculators/Excel-VRAM-Sizing/: Sizing_TCO_Calculator.xlsx  generate_sizing.py
AI-Architect-Calculators/server/: download_deps.bat  download_deps.sh  main.cpp
AI-Architect-Calculators/web/: index.html  script.js  styles.css
Active-Recall-Notes/: AI-Architecture-Delivery-Documentation-Checklist.md  Federated-Learning-and-Privacy-Preserving-Architecture.md  General-Active-Recall-Notes.md  High-Availability-and-Disaster-Recovery-Notes.md  Networking-Math-DevOps-VoIP-Notes.md  PoC-Prototype-MVP-Pilot-and-Production.md  Serverless-and-FaaS-Notes.md  System-Design.docx
Homework-Tasks/ДЗ-1. Разработка стратегии, оценка рисков и дорожной карты AI-проекта/: ISAR Sample_risk_calculator Final.xlsx  Reviewer-Feedback.docx  Risk_Matrix_Example.xlsx  ДЗ-1.html
Homework-Tasks/ДЗ-10. FinOps и Governance - управление стоимостью и этикой AI/: Model_Card_and_FinOps_Report.md  Reviewer-Feedback.docx  Описание ДЗ-10.docx
Homework-Tasks/Проектная Работа/: .env.example  README.md  (+4 more)
Solution Architecture Document/: SAD.md
apps/ai_architect_adr_atam/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  DEMO.md  DESIGN.md  Dockerfile  README.md  start_server.bat  start_server.sh  stop_server.bat  stop_server.sh
apps/ai_architect_adr_atam/data/adr/: 11111111-1111-4111-8111-111111111111.json  f0904019-9905-4263-af08-d9414cf1c96a.json
apps/ai_architect_adr_atam/data/atam/: 22222222-2222-4222-8222-222222222222.json  d90778c3-4fab-4816-9237-1d2d0b441eaf.json
apps/ai_architect_adr_atam/server/: main.cpp
apps/ai_architect_adr_atam/server/ai/: ai_service.cpp  ai_service.h  gemini_client.cpp  gemini_client.h  llm_client.h  ollama_client.cpp  ollama_client.h  provider_llm_client.cpp  provider_llm_client.h
apps/ai_architect_adr_atam/server/domain/: adr.cpp  adr.h  atam.cpp  atam.h
apps/ai_architect_adr_atam/server/http/: api_routes.cpp  api_routes.h
apps/ai_architect_adr_atam/server/persistence/: adr_repository.cpp  adr_repository.h  atam_repository.cpp  atam_repository.h  file_store.cpp  file_store.h
apps/ai_architect_adr_atam/server/services/: adr_service.cpp  adr_service.h  atam_service.cpp  atam_service.h  export_service.cpp  export_service.h  reuse_service.cpp  reuse_service.h  template_service.cpp  template_service.h
apps/ai_architect_adr_atam/server/util/: util.cpp  util.h
apps/ai_architect_adr_atam/templates/adr/: default.json  lightweight.json  llm_system.json
apps/ai_architect_adr_atam/templates/atam/: default.json  llm_platform.json
apps/ai_architect_adr_atam/tests/: CMakeLists.txt  test_domain.cpp  test_harness.h  test_main.cpp  test_persistence.cpp  test_services.cpp  test_util.cpp
apps/ai_architect_adr_atam/web/: index.html
apps/ai_architect_adr_atam/web/css/: styles.css
apps/ai_architect_adr_atam/web/js/: adr.js  ai_panel.js  api.js  app.js  atam.js  common.js  dashboard.js
(+87 files in other folders)
